Update loadServingRoot. Update readme and swagger docs
