# docs/swagger.json
@@ -11,6 +11,51 @@
     },
     "basePath": "/",
     "paths": {
+        "/content/{filename}": {
+            "get": {
+                "description": "Get image by filename",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "image/png",
+                    " image/jpg"
+                ],
+                "tags": [
+                    "load"
+                ],
+                "summary": "Get image by filename",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Image name",
+                        "name": "filename",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/load": {
             "get": {
                 "description": "Upload single image and get his name",
@@ -90,51 +135,6 @@
                             "additionalProperties": {
                                 "type": "string"
                             }
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/{filename}": {
-            "get": {
-                "description": "Get image by filename",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "image/png",
-                    " image/jpg"
-                ],
-                "tags": [
-                    "load"
-                ],
-                "summary": "Get image by filename",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Image name",
-                        "name": "filename",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
                         }
                     },
                     "404": {
